# RustWasm

./: Cargo.toml  README.md  arc.diff  index.html  style.css
js/: contract.js  eth.js  index.js  utils.js
src/: lib.rs
src/bindings/: mod.rs
src/contract/: abi.rs  contract.rs  deploy.rs  erc20.rs  events.rs  mod.rs  utils.rs
src/eth_integration/: mod.rs
src/utils/: mod.rs
test/: Cargo.toml  html.index
test/src/: lib.rs
