[package]
name = "rustwasm_eth"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"  # WebAssembly için optimizasyon, kod boyutunu küçültmek için

[features]
default = ["native"]
native = []
wasm = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
