[package]
name = "rust_wasm_project"
version = "0.1.0"
authors = ["nzengi"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
ethers = "2.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"  # Asenkron işleme destek
log = "0.4"
url = "2.2"

[lib]
crate-type = ["cdylib", "rlib"]
